# wazuh

.github/workflows/: python-code-analysis.yml
api/api/controllers/: agent_controller.py
api/api/models/: event_ingest_model.py
api/api/spec/: spec.yaml
api/test/integration/: conftest.py  test_event_endpoints.tavern.yaml
api/test/integration/mapping/: integration_test_api_endpoints.json
framework/: requirements.txt
framework/scripts/: wazuh_clusterd.py
framework/wazuh/core/: common.py  configuration.py  exception.py  utils.py
framework/wazuh/core/cluster/: common.py  master.py  worker.py
framework/wazuh/core/cluster/tests/: test_master.py  test_worker.py
framework/wazuh/core/tests/: test_utils.py
framework/wazuh/rbac/default/: policies.yaml  relationships.yaml
framework/wazuh/rbac/tests/: test_orm.py
framework/wazuh/tests/: test_agent.py
src/: Makefile
src/analysisd/: config.c
src/config/: global-config.c  global-config.h  wmodules-aws.c
src/engine/tools/engine-suite/: setup.cfg
src/engine/tools/vagrant/: Vagrantfile
src/headers/: shared.h
src/init/wazuh/: wazuh.sh
src/logcollector/: logcollector.c
src/syscheckd/src/: create_db.c
src/unit_tests/wazuh_modules/: CMakeLists.txt
src/unit_tests/wazuh_modules/exec/: CMakeLists.txt  test_wm_exec.c
src/unit_tests/wazuh_modules/vulnerability_detector/: CMakeLists.txt  test_wm_vuln_detector.c
src/unit_tests/wrappers/windows/: processthreadsapi_wrappers.c  processthreadsapi_wrappers.h
src/wazuh_db/: schema_agents.sql
src/wazuh_modules/: wm_exec.c  wmodules.h
src/wazuh_modules/vulnerability_detector/: wm_vuln_detector.c
src/win32/: do_upgrade.ps1
tests/integration/: conftest.py
wodles/aws/: aws_s3.py  aws_tools.py  wazuh_integration.py
wodles/aws/buckets_s3/: aws_bucket.py  vpcflow.py
wodles/aws/services/: aws_service.py  cloudwatchlogs.py  inspector.py
wodles/aws/subscribers/: s3_log_handler.py
wodles/aws/tests/: test_s3_log_handler.py  test_vpcflow.py
wodles/azure/: azure-logs.py
wodles/azure/tests/: test_azure.py
